# 4_Role_Agentic_Architecture_PDMA

./: .gitignore  README.md  mcp_server.py  pyproject.toml
agent6/: __init__.py  __main__.py  action.py  agent.py  artifacts.py  decision.py  gateway.py  memory.py  perception.py  schemas.py
state/: memory.json
state/artifacts/: art_432368c3affc4a2e.json  art_4b12344d2c8b0e5c.json  art_7130f4fec905041b.json  art_adb835e6621ce900.json
