[project]
name = "assignment6-agent6"
version = "0.1.0"
description = "EAG V3 Session 6 — four-role agentic architecture (Memory, Perception, Decision, Action)."
readme = "README.md"
requires-python = ">=3.11"

# Runtime deps cover both the agent (httpx + pydantic + mcp) and the
# MCP server it spawns over stdio (ddgs + crawl4ai + tavily). One env
# keeps the stdio subprocess able to import what it needs.
dependencies = [
    "pydantic>=2.6",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "mcp>=1.4",
    "ddgs>=9.0",
    "tavily-python>=0.5",
    "crawl4ai>=0.5",
]

[tool.uv]
# Pin Python so every `uv run` lands on the same interpreter the agent
# was developed against.
python-preference = "managed"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]
ignore = ["E501"]
